@@ -19,7 +19,7 @@ from .site import HAVE_GIT, GIT, GIT_ENV
 # Returns:
 #    (str): The ref
 #
-def generate_junction(tmpdir, subproject_path, junction_path, *, store_ref=True):
+def generate_junction(tmpdir, subproject_path, junction_path, *, store_ref=True, options={}):
     # Create a repo to hold the subproject and generate
     # a junction element for it
     #
@@ -29,6 +29,10 @@ def generate_junction(tmpdir, subproject_path, junction_path, *, store_ref=True)
         source_ref = None
 
     element = {"kind": "junction", "sources": [repo.source_config(ref=source_ref)]}
+
+    if options:
+        element["config"] = {"options": options}
+
     _yaml.roundtrip_dump(element, junction_path)
 
     return ref
