@@ -1,0 +1,4 @@
+name: test
+
+(@):
+  - junction.bst:extra_conf.yml
