@@ -1,0 +1,4 @@
+name: test
+
+(@):
+  - junction-1.bst:extra_conf.yml
