@@ -1,0 +1,4 @@
+kind: manual
+
+(@):
+  - junction.bst:extra_conf.yml
